[package]
name = "yew_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version = "0.21", features = ["csr"]}
stylist ={version = "0.13.0", features = ["yew", "parser"]}

# -- Tracing
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# serilaize & deserialize
serde = {version = "1.0.0", features = ["derive"]}
serde_json = "1.0.0"

# -- console log
gloo = "0.11.0"

